--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>I am a 21 year-old man from Lisbon, Portugal who has been passionate about
+							<p>I am a 22 year-old man from Lisbon, Portugal who has been passionate about
 								the entertainment industry for as long as I can remember. I graduated in Game
 								Development
-								in the end of 2020 after completing my internship at Nerd Monkeys and I've been
-								working there mainly as a Programmer since!</p>
+								in the end of 2020 after completing my internship at Nerd Monkeys and I'm currently working at 
+								Fun Punch!</p>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>In college, I formed a team called <a href="https://redoak-studios.itch.io/"
@@ -88,8 +88,8 @@
 						</div>
 					</div>
 					<hr class="minor colorized" />
-					<p>Thanks to many professional, educational and recreational past projects,
-						as well as my current position at Nerd Monkeys I have developed great skills
+					<p>Thanks the different professional positions I've had in indie game studios, as well as
+						many educational and recreational past projects, I have developed great skills
 						working as a team and individually, not only for bigger projects but also smaller
 						ones such as game jams - having participated on several throughout my journey as a game
 						developer.
@@ -132,8 +132,8 @@
 							<span class="icon solid alt major fa-paint-brush"></span>
 							<h3>2D Art & Graphic Design</h3>
 							<p>UI design, promo-art, image manipulation and graphic design
-								are all things I've worked on and am familiarized with. I specialize in Photoshop
-								and have basic knowledge in vector-based programs such as Illustrator.
+							   are all things I've worked, although I'd categorize my skills as intermediate. I specialize 
+							   in Photoshop and have basic knowledge in vector-based programs such as Illustrator.
 							</p>
 						</section>
 					</div>
