Fix typo in main page

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Who am I?</h2>
-								<p>Long story short, I'm a person passionate about game development
+								<p>Long story short, I'm a young man passionate about game development
 									and the entertainment industry. </p>
 							</header>
 						</div>
@@ -88,7 +88,7 @@
 						</div>
 					</div>
 					<hr class="minor colorized" />
-					<p>Thanks the different professional positions I've had in indie game studios, as well as
+					<p>Thanks to the different professional positions I've had in indie game studios, as well as
 						many educational and recreational past projects, I have developed great skills
 						working as a team and individually, not only for bigger projects but also smaller
 						ones such as game jams - having participated on several throughout my journey as a game
