Update some links and info

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 				<span class="image overlayed"><img src="images/me/me.jpg" alt="" /></span>
 				<header class="main">
 					<h2>Diogo Martins</h2>
-					<p>Game Developer<br>Programmer<br>2D Artist</p>
+					<p>Unity Developer<br>Gameplay Programmer</p>
 					<a href="https://drive.google.com/file/d/1pFxBEYnO9hSdU497zqQS2ztgYVE8w04E/view?usp=sharing"
 						target="_blank" class="button cv fat small">CV</a>
 					<ul class="icons">
 						<li><a href="https://twitter.com/diotins" target="_blank"
 								class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.instagram.com/diogo_martins99" target="_blank"
+						<li><a href="https://www.instagram.com/therealdiotins/" target="_blank"
 								class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 						<li><a href="https://www.facebook.com/diogo.fmartins99" target="_blank"
 								class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a>
