add face masher page

--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@
 				<!-- Gallery -->
 				<div class="gallery style1 medium onscroll-fade-in">
 					<article>
+						<a href="face-masher.html" class="image2"><img
+								src="images/projects/facemasher/spotlight.png" alt="" /></a>
+						<div class="caption">
+							<h3>Face Masher</h3>
+							<p class="subtitle"> Programmer | Game Designer </p>
+						</div>
+					</article>
+					<article>
 						<a href="happy-new-rocket.html" class="image2"><img
 								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
 						<div class="caption">
