--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						working as a team and individually, not only for bigger projects but also smaller
 						ones such as game jams - having participated on several throughout my journey as a game
 						developer.
-						<br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into
+						<br><br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into
 						<b>Unreal</b> as well.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
@@ -129,13 +129,21 @@
 							</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-bomb"></span>
+							<h3>Fast-prototyping</h3>
+							<p>With skills in other areas of development like animation, 3D modelling, UI design and 
+								visual effects I am able to quickly prototype ideas with good-looking visuals and juice.
+							</p>
+						</section>
+						<!--<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-rocket"></span>
 							<span class="icon solid alt major fa-paint-brush"></span>
 							<h3>2D Art & Graphic Design</h3>
 							<p>UI design, promo-art, image manipulation and graphic design
 							   are all things I've worked, although I'd categorize my skills as intermediate. I specialize 
 							   in Photoshop and have basic knowledge in vector-based programs such as Illustrator.
 							</p>
-						</section>
+						</section>-->
 					</div>
 				</div>
 			</div>
