Add bomb it page and update info

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 						working as a team and individually, not only for bigger projects but also smaller
 						ones such as game jams - having participated on several throughout my journey as a game
 						developer.
-						<br><br>With 3+ years of experience, <b>Unity</b> has been my go-to engine, but I've delved into
+						<br><br>With around 5 years of game development experience, <b>Unity</b> has been my go-to engine, but I've delved into
 						<b>Unreal</b> as well.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
@@ -157,21 +157,29 @@
 				<!-- Gallery -->
 				<div class="gallery style1 medium onscroll-fade-in">
 					<article>
-						<a href="face-masher.html" class="image2"><img
-								src="images/projects/facemasher/spotlight.png" alt="" /></a>
+						<a href="bomb-it.html" class="image2"><img
+								src="images/projects/bombit/header.png" alt="" /></a>
 						<div class="caption">
-							<h3>Face Masher</h3>
-							<p class="subtitle"> Programmer | Game Designer </p>
+							<h3>Bomb It</h3>
+							<p class="subtitle"> Programmer | Game Designer | 3D Artist | VFX Artist </p>
 						</div>
 					</article>
 					<article>
 						<a href="happy-new-rocket.html" class="image2"><img
-								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
-						<div class="caption">
-							<h3>Happy New Rocket</h3>
-							<p class="subtitle"> Programmer | Game Designer</p>
-						</div>
-					</article>
+							src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
+							<div class="caption">
+								<h3>Happy New Rocket</h3>
+								<p class="subtitle"> Programmer | Game Designer</p>
+							</div>
+						</article>
+						<article>
+							<a href="face-masher.html" class="image2"><img
+									src="images/projects/facemasher/spotlight.png" alt="" /></a>
+							<div class="caption">
+								<h3>Face Masher</h3>
+								<p class="subtitle"> Programmer | Game Designer </p>
+							</div>
+						</article>
 					<article>
 						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
