Update projects style; ;Update many pages; Tweak visuals.

--- a/bernardino.html
+++ b/bernardino.html
@@ -122,13 +122,15 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/bernardino/banner.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>Bernardino was a Unity project developed in 4 months by me and my group for the last
+							<p>Bernardino was a Unity project developed in 4 months my group and I for the last
 								semester of the second year. Since we we're working on two big projects for that
 								semester - Bernardino and Heróis do Mar - we decided to do a proper division of tasks. So we
 								all worked on the game design of both projects, but split into 2 groups for the rest of
 								their development, still side-by-side giving feedback and sharing thoughts.
 								<br><br>
-								Bernardino was an incredibly challenging project, as I had to implemend a lot of physics behaviours. I also took my first steps in procedural animation for this project and improved my AI skills by tackling the bosses.
+								Bernardino was an incredibly challenging project, as I had to implement a lot of physics 
+								behaviours. I also took my first steps in procedural animation for this project and 
+								improved my AI skills by tackling the bosses.
 								<br><br> 
 								For now, the project will remain a vertical slice. </p>
 							<h3>My Role In The Project</h3>
@@ -141,7 +143,8 @@
 									<p> I've worked on game design side-by-side with my team.</p>
 								</li>
 								<li>2D Art
-									<p> I designed the game's UI elements and I was also responsible for creating the official documents and web/2D content.
+									<p> I designed the game's UI elements and I was also responsible for creating the official 
+										documents and web/2D content.
 									</p>
 								</li>
 								<li>3D Art
@@ -150,7 +153,8 @@
 								</li>
 								<li>Animation
 									<p>
-										I took my first steps in procedural animation and also created some basic animations within the Unity engine itself.
+										I took my first steps in procedural animation and also created some basic 
+										animations within the Unity engine itself.
 									</p>
 								</li>
 							</ul>
