--- a/find-your-everything.html
+++ b/find-your-everything.html
@@ -71,6 +71,9 @@
 											<p>Experimental</p>
 										</li>
 										<li>
+											<p>Simulation</p>
+										</li>
+										<li>
 											<p>Top-down</p>
 										</li>
 										<li>
