--- a/herois-do-mar.html
+++ b/herois-do-mar.html
@@ -80,7 +80,8 @@
 								</footer>
 								<hr />
 								<h3>Synopsis</h3>
-								<p>Heróis do Mar is an arena brawler whose characters are portuguese historic figures. Each character has their own set of abilities which the players have to skillfully use to defeat their opponents.
+								<p>Heróis do Mar is an arena brawler whose characters are portuguese historic figures. 
+									Each fighter has their own set of abilities which the players have to skillfully use to defeat their opponents.
 								</p>
 								<!-- ITCH.IO PAGE -->
 								<footer>
@@ -106,7 +107,9 @@
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Game Design
-									<p> I was one of the game designers, participating on all ideas and decisions for the characters, the map, the UI and all the other aspects of game design.</p>
+									<p> I was one of the game designers, 
+										working on the the combat, characters, map, progression and 
+										all other aspects of design.
 								</li>
 							</ul>
 							<!-- Gallery  -->
