--- a/zoo-quest.html
+++ b/zoo-quest.html
@@ -85,7 +85,7 @@
 								<h3>Synopsis</h3>
 								<p>Monkeys have escaped from their cage, and as a Zoo Keeper, it is your duty to find
 									them and bring them back to where they're safe!
-									Explore the zoo and talk to its animals, they will give you clues in exchange for
+									Explore the zoo and talk to its animals as they give you clues in exchange for
 									favors!
 									The game consists mostly of rhyming riddles so put your riddle-solving skills to the
 									test and find all the lost monkeys!
