--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
 							<p>I am a 22 year-old man from Lisbon, Portugal who has been passionate about
 								the entertainment industry for as long as I can remember. I graduated in Game
 								Development
-								in the end of 2020 after completing my internship at Nerd Monkeys and I'm currently working at 
+								in the end of 2020 after completing my internship at Nerd Monkeys and I'm currently
+								working at
 								Fun Punch!</p>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -93,7 +94,8 @@
 						working as a team and individually, not only for bigger projects but also smaller
 						ones such as game jams - having participated on several throughout my journey as a game
 						developer.
-						<br><br>With around 5 years of game development experience, <b>Unity</b> has been my go-to engine, but I've delved into
+						<br><br>With around 5 years of game development experience, <b>Unity</b> has been my go-to
+						engine, but I've delved into
 						<b>Unreal</b> as well.
 						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
 						sports.
@@ -131,7 +133,7 @@
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-bomb"></span>
 							<h3>Fast-prototyping</h3>
-							<p>With skills in other areas of development like animation, 3D modelling, UI design and 
+							<p>With skills in other areas of development like animation, 3D modelling, UI design and
 								visual effects I am able to quickly prototype ideas with good-looking visuals and juice.
 							</p>
 						</section>
@@ -152,40 +154,45 @@
 		<section id="projects" class="wrapper style1 align-center special fade-up">
 			<div class="container2">
 				<header class="major">
-					<h2>My Projects</h2>
+					<h2>Main Projects</h2>
 				</header>
 				<!-- Gallery -->
-				<div class="gallery style1 medium onscroll-fade-in">
+				<div class="gallery style3 medium onscroll-fade-in">
 					<article>
-						<a href="bomb-it.html" class="image2"><img
-								src="images/projects/bombit/header.png" alt="" /></a>
+						<a href="bomb-it.html" class="image2"><img src="images/projects/bombit/header.png" alt="" /></a>
 						<div class="caption">
 							<h3>Bomb It</h3>
-							<p class="subtitle"> Programmer | Game Designer | 3D Artist | VFX Artist </p>
+							<p class="subtitle"> Mobile Hyper-Casual</p>
+							<p class="details"> Programmer | Game Designer | 3D Artist | VFX Artist </p>
+						</div>
+						<div>
 						</div>
 					</article>
 					<article>
 						<a href="happy-new-rocket.html" class="image2"><img
-							src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
-							<div class="caption">
-								<h3>Happy New Rocket</h3>
-								<p class="subtitle"> Programmer | Game Designer</p>
-							</div>
-						</article>
-						<article>
-							<a href="face-masher.html" class="image2"><img
-									src="images/projects/facemasher/spotlight.png" alt="" /></a>
-							<div class="caption">
-								<h3>Face Masher</h3>
-								<p class="subtitle"> Programmer | Game Designer </p>
-							</div>
-						</article>
+								src="images/projects/happynewrocket/spotlight.png" alt="" /></a>
+						<div class="caption">
+							<h3>Happy New Rocket</h3>
+							<p class="subtitle">Multiplayer Action Battle</p>
+							<p class="details"> Programmer | Game Designer</p>
+						</div>
+					</article>
+					<article>
+						<a href="face-masher.html" class="image2"><img src="images/projects/facemasher/spotlight.png"
+								alt="" /></a>
+						<div class="caption">
+							<h3>Face Masher</h3>
+							<p class="subtitle"> Mobile Hyper-Casual</p>
+							<p class="details"> Programmer | Game Designer </p>
+						</div>
+					</article>
 					<article>
 						<a href="holy-hell.html" class="image2"><img src="images/projects/holyhell/spotlight.JPG"
 								alt="" /></a>
 						<div class="caption">
 							<h3>Holy Hell</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
+							<p class="subtitle">Top-Down Action-Adventure</p>
+							<p class="details">Programmer | Game Designer | 2D Artist | Marketing Manager</p>
 						</div>
 					</article>
 					<article>
@@ -193,7 +200,8 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Illuminants</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist</p>
+							<p class="subtitle">Top-Down Puzzle Game</p>
+							<p class="details">Programmer | Game Designer | 2D Artist</p>
 						</div>
 					</article>
 					<article>
@@ -201,7 +209,8 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Bernardino</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
+							<p class="subtitle">Physics-Based Adventure</p>
+							<p class="details">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
 
@@ -210,7 +219,8 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Zoo Quest</h3>
-							<p class="subtitle">Programmer | Game Designer | 2D Artist | 3D Artist</p>
+							<p class="subtitle">Riddle/Puzzle Walking Sim</p>
+							<p class="details">Programmer | Game Designer | 2D Artist | 3D Artist</p>
 						</div>
 					</article>
 					<article>
@@ -218,14 +228,16 @@
 								src="images/projects/findyoureverything/spotlight.png" alt="" /></a>
 						<div class="caption">
 							<h3>Find Your Everything</h3>
-							<p class="subtitle">Programmer | Game Designer </p>
+							<p class="subtitle">Experimental Sim</p>
+							<p class="details">Programmer | Game Designer </p>
 						</div>
 					</article>
 					<article>
 						<a href="atmu.html" class="image2"><img src="images/projects/atmu/banner.png" alt="" /></a>
 						<div class="caption">
 							<h3>ATMU</h3>
-							<p class="subtitle">Programmer | Game Designer</p>
+							<p class="subtitle">Side-Scroller Adventure</p>
+							<p class="details">Programmer | Game Designer</p>
 						</div>
 					</article>
 
@@ -234,7 +246,8 @@
 								alt="" /></a>
 						<div class="caption">
 							<h3>Heróis do Mar</h3>
-							<p class="subtitle">Game Designer</p>
+							<p class="subtitle">Multiplayer Arena Brawler</p>
+							<p class="details">Game Designer</p>
 						</div>
 					</article>
 				</div>
@@ -243,7 +256,22 @@
 				<a href="https://diotins.itch.io/" target="_blank" class="button fat">Other Projects</a>
 
 			</footer>-->
+			
 		</section>
+			
+		<!--<section id="other" class="spotlight small style2 right">
+			<span class="image fit main"><img src="images/me/redoak_team_goofy.png" alt="" /></span>
+			<div class="content">
+				<header>
+					<h2>Other projects</h2>
+					<p class="subtitle">From game jams to prototypes, here you can check other smaller projects.</p>
+				</header>
+				<ul class="actions">
+					<li><a href="holy-hell.html" class="button">See more</a></li>
+				</ul>
+			</div>
+			<a href="#other" class="goto-next scrolly">Next</a>
+		</section>-->
 
 		<section id="accolades" class="wrapper style1 align-center special fade-up">
 			<div class="container2">
