Major updates to About Me

--- a/index.html
+++ b/index.html
@@ -64,20 +64,25 @@
 			<div class="content">
 				<div class="container">
 					<div class="row">
-						<div class="col-4 col-12-medium">
+						<!--<div class="col-4 col-12-medium">
 							<header>
 								<h2>Who am I?</h2>
-								<p>Long story short, I'm a young man passionate about game development
+								<p>I'm a young man passionate about game development
 									and the entertainment industry. </p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>I am a 22 year-old man from Lisbon, Portugal who has been passionate about
-								the entertainment industry for as long as I can remember. I graduated in Game
-								Development
-								in the end of 2020 after completing my internship at Nerd Monkeys and I'm currently
-								working at
-								Fun Punch!</p>
+							<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games ever
+								since I first layed my hands on a console as a kid. Back then, my best friend and
+								I would spend recess drawing new characters and level ideas inspired by our favorite
+								games.
+						</div>-->
+						<div class="col-4 col-12-medium">
+							<header>
+								<h2>Who am I?</h2>
+								<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games
+									ever since I first layed my hands on a console as a kid. </p>
+							</header>
 						</div>
 						<div class="col-4 col-12-medium">
 							<p>In college, I formed a team called <a href="https://redoak-studios.itch.io/"
@@ -87,19 +92,39 @@
 								<a href="#accolades" class="scrolly">Accolades</a> section.
 							</p>
 						</div>
+						<div class="col-4 col-12-medium">
+							<p>After graduating in Game Development at Lusofona University with substantial results, I immediately began
+								 working at
+								<a href="https://nerdmonkeys.pt/" target="_blank">Nerd Monkeys</a>
+								and later got hired by
+								<a href="https://funpunchgames.com/" target="_blank">Fun Punch</a>
+								, two of the most renown indie game studios
+								in Portugal.
+							</p>
+						</div>
 					</div>
+
 					<hr class="minor colorized" />
-					<p>Thanks to the different professional positions I've had in indie game studios, as well as
-						many educational and recreational past projects, I have developed great skills
-						working as a team and individually, not only for bigger projects but also smaller
-						ones such as game jams - having participated on several throughout my journey as a game
-						developer.
-						<br><br>With around 5 years of game development experience, <b>Unity</b> has been my go-to
-						engine, but I've delved into
-						<b>Unreal</b> as well.
-						<br><br>Aside from the game dev world, I am also an energetic individual who practices combat
-						sports.
-						I'm a Kickboxing and Muay Thai federate athlete with a Kickboxing National Champion title.
+
+					<p>With around <b>5 years' experience</b> in game development, <b>Unity</b> has been my go-to
+						engine, altought I've delved into
+						<b>Unreal</b> as well. I've had the chance to work on many different genres of games
+						and develop them for a multitude of platforms, which has given me a wide range of
+						experience.
+						<br><br>
+						I am proud to say that I am a very ambitious person who is constantly eager to tackle
+						new challenges, learn new skills and grow as a professional,
+						ultimately striving to become a future master of the industry.
+						<br><br>
+						Aside from the game dev world, I am also a neo-professional Kickboxing and Muay Thai
+						federate athlete with a Kickboxing National Champion title.
+					</p>
+					<p class="small">
+						<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
+						Mirror's Edge | Subnautica |
+						Outlast | Amnesia: The Dark Descent
+						<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
+						Legends.
 					</p>
 				</div>
 			</div>
@@ -256,9 +281,9 @@
 				<a href="https://diotins.itch.io/" target="_blank" class="button fat">Other Projects</a>
 
 			</footer>-->
-			
+
 		</section>
-			
+
 		<!--<section id="other" class="spotlight small style2 right">
 			<span class="image fit main"><img src="images/me/redoak_team_goofy.png" alt="" /></span>
 			<div class="content">
