Add shaders mention in Fast-prototyping section

--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-bomb"></span>
 							<h3>Fast-prototyping</h3>
-							<p>With skills in other areas of development like animation, 3D modelling, UI design and
-								visual effects I am able to quickly prototype ideas with good-looking visuals and juice.
+							<p>With skills in other areas of development like animation, 3D modelling, UI design,
+								visual effects and shaders I am able to quickly prototype ideas with good-looking 
+								visuals and juice.
 							</p>
 						</section>
 						<!--<section class="col-4 col-6-medium col-12-xsmall">
