Fix small typo in main page

--- a/index.html
+++ b/index.html
@@ -58,124 +58,6 @@
 			<a href="#about-me" class="goto-next scrolly">Next</a>
 		</section>
 
-		<!-- One -->
-		<section id="about-me" class="spotlight style1 bottom">
-			<span class="image overlayed main"><img src="images/me/me5_streched.JPG" alt="" /></span>
-			<div class="content">
-				<div class="container">
-					<div class="row">
-						<!--<div class="col-4 col-12-medium">
-							<header>
-								<h2>Who am I?</h2>
-								<p>I'm a young man passionate about game development
-									and the entertainment industry. </p>
-							</header>
-						</div>
-						<div class="col-4 col-12-medium">
-							<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games ever
-								since I first layed my hands on a console as a kid. Back then, my best friend and
-								I would spend recess drawing new characters and level ideas inspired by our favorite
-								games.
-						</div>-->
-						<div class="col-4 col-12-medium">
-							<header>
-								<h2>Who am I?</h2>
-								<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games
-									ever since I first layed my hands on a console as a kid. </p>
-							</header>
-						</div>
-						<div class="col-4 col-12-medium">
-							<p>In college, I formed a team called <a href="https://redoak-studios.itch.io/"
-									target="_blank">Redoak Studios</a> with 3 colleagues, which was responsible for the
-								development of many games. We accomplished great results, earning many respected
-								awards from my University and other organizations which you can check in the
-								<a href="#accolades" class="scrolly">Accolades</a> section.
-							</p>
-						</div>
-						<div class="col-4 col-12-medium">
-							<p>After graduating in Game Development at Lusofona University with substantial results, I immediately began
-								 working at
-								<a href="https://nerdmonkeys.pt/" target="_blank">Nerd Monkeys</a>
-								and later got hired by
-								<a href="https://funpunchgames.com/" target="_blank">Fun Punch</a>
-								, two of the most renown indie game studios
-								in Portugal.
-							</p>
-						</div>
-					</div>
-
-					<hr class="minor colorized" />
-
-					<p>With around <b>5 years' experience</b> in game development, <b>Unity</b> has been my go-to
-						engine, altought I've delved into
-						<b>Unreal</b> as well. I've had the chance to work on many different genres of games
-						and develop them for a multitude of platforms, which has given me a wide range of
-						experience.
-						<br><br>
-						I am proud to say that I am a very ambitious person who is constantly eager to tackle
-						new challenges, learn new skills and grow as a professional,
-						ultimately striving to become a future master of the industry.
-						<br><br>
-						Aside from the game dev world, I am also a neo-professional Kickboxing and Muay Thai
-						federate athlete with a Kickboxing National Champion title.
-					</p>
-					<p class="small">
-						<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
-						Mirror's Edge | Subnautica |
-						Outlast | Amnesia: The Dark Descent
-						<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
-						Legends.
-					</p>
-				</div>
-			</div>
-		</section>
-
-		<!-- Two -->
-		<section id="qualifications" class="wrapper style1 special fade-up">
-			<div class="container">
-				<header class="major">
-					<h2>What are my main qualifications?</h2>
-					<p></p>
-				</header>
-				<div class="box alt">
-					<div class="row aln-center gtr-uniform">
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-keyboard"></span>
-							<h3>Programming</h3>
-							<p>I specialize in C# and object-oriented programming but I have worked with many
-								other languages such as C, C++, JavaScript and HTML both in game development and other
-								applications as well.
-							</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-gamepad"></span>
-							<h3>Game Design</h3>
-							<p>One of my most consistent roles in game development has been game design, which I
-								had in all of my previous projects. Other extensions of this area such as World and
-								Level Design have also been a part of my work.
-							</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-bomb"></span>
-							<h3>Fast-prototyping</h3>
-							<p>With skills in other areas of development like animation, 3D modelling, UI design,
-								visual effects and shaders I am able to quickly prototype ideas with good-looking 
-								visuals and juice.
-							</p>
-						</section>
-						<!--<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-rocket"></span>
-							<span class="icon solid alt major fa-paint-brush"></span>
-							<h3>2D Art & Graphic Design</h3>
-							<p>UI design, promo-art, image manipulation and graphic design
-							   are all things I've worked, although I'd categorize my skills as intermediate. I specialize 
-							   in Photoshop and have basic knowledge in vector-based programs such as Illustrator.
-							</p>
-						</section>-->
-					</div>
-				</div>
-			</div>
-		</section>
 		<!-- Three -->
 		<section id="projects" class="wrapper style1 align-center special fade-up">
 			<div class="container2">
@@ -298,6 +180,116 @@
 			</div>
 			<a href="#other" class="goto-next scrolly">Next</a>
 		</section>-->
+
+		<!-- One -->
+<section id="about-me" class="spotlight style1 bottom">
+	<span class="image overlayed main"><img src="images/me/me5_streched.JPG" alt="" /></span>
+	<div class="content">
+		<div class="container">
+			<div class="row">
+				<!--<div class="col-4 col-12-medium">
+					<header>
+						<h2>Who am I?</h2>
+						<p>I'm a young man passionate about game development
+							and the entertainment industry. </p>
+					</header>
+				</div>
+				<div class="col-4 col-12-medium">
+					<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games ever
+						since I first layed my hands on a console as a kid. Back then, my best friend and
+						I would spend recess drawing new characters and level ideas inspired by our favorite
+						games.
+				</div>-->
+				<div class="col-4 col-12-medium">
+					<header>
+						<h2>Who am I?</h2>
+						<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games
+							ever since I first layed my hands on a console as a kid. </p>
+					</header>
+				</div>
+				<div class="col-4 col-12-medium">
+					<p>After graduating in Game Development at Lusofona University with substantial results, I immediately began
+						 working at
+						<a href="https://nerdmonkeys.pt/" target="_blank">Nerd Monkeys</a>
+						and later got hired by
+						<a href="https://funpunchgames.com/" target="_blank">Fun Punch</a>
+						, two of the most renown indie game studios
+						in Portugal.
+					</p>
+				</div>
+				<div class="col-4 col-12-medium">
+					<p>With around <b>5 years' experience</b> in game development, <b>Unity</b> has been my go-to
+						engine, although I've delved into
+						<b>Unreal</b> as well. I've had the chance to work on many different genres of games
+						and develop them for a multitude of platforms, which has given me a wide range of
+						experience.
+					</p>
+				</div>
+			</div>
+			<hr class="minor colorized" />
+			<p>I am proud to say that I am a very ambitious person who is constantly eager to tackle
+				new challenges, learn new skills and grow as a professional,
+				ultimately striving to become a future master of the industry.
+				<br><br>
+				Aside from the game dev world, I am also a neo-professional Kickboxing and Muay Thai
+				federate athlete with a Kickboxing National Champion title.
+			</p>
+			<p class="small">
+				<b>Fav games:</b> Hollow Knight | Terraria | Far Cry 3 | Assassin's Creed II |
+				Mirror's Edge | Subnautica |
+				Outlast | Amnesia: The Dark Descent
+				<br>Also a big fan of competitive FPS games including Call of Duty, Titanfall 2 and Apex
+				Legends.
+			</p>
+		</div>
+	</div>
+</section>
+<!-- Two -->
+<section id="qualifications" class="wrapper style1 special fade-up">
+	<div class="container">
+		<header class="major">
+			<h2>What are my main qualifications?</h2>
+			<p></p>
+		</header>
+		<div class="box alt">
+			<div class="row aln-center gtr-uniform">
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-keyboard"></span>
+					<h3>Programming</h3>
+					<p>I specialize in C# and object-oriented programming but I have worked with many
+						other languages such as C, C++, JavaScript and HTML both in game development and other
+						applications as well.
+					</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-gamepad"></span>
+					<h3>Game Design</h3>
+					<p>One of my most consistent roles in game development has been game design, which I
+						had in all of my previous projects. Other extensions of this area such as World and
+						Level Design have also been a part of my work.
+					</p>
+				</section>
+				<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-bomb"></span>
+					<h3>Fast-prototyping</h3>
+					<p>With skills in other areas of development like animation, 3D modelling, UI design,
+						visual effects and shaders I am able to quickly prototype ideas with good-looking 
+						visuals and juice.
+					</p>
+				</section>
+				<!--<section class="col-4 col-6-medium col-12-xsmall">
+					<span class="icon solid alt major fa-rocket"></span>
+					<span class="icon solid alt major fa-paint-brush"></span>
+					<h3>2D Art & Graphic Design</h3>
+					<p>UI design, promo-art, image manipulation and graphic design
+					   are all things I've worked, although I'd categorize my skills as intermediate. I specialize 
+					   in Photoshop and have basic knowledge in vector-based programs such as Illustrator.
+					</p>
+				</section>-->
+			</div>
+		</div>
+	</div>
+</section>
 
 		<section id="accolades" class="wrapper style1 align-center special fade-up">
 			<div class="container2">
