Add crypto bird page; Keep working on updated main page

--- a/crypto-bird.html
+++ b/crypto-bird.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Diogo Martins - Bomb It</title>
+	<title>Diogo Martins - Crypto Bird</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,8 +54,8 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>Bomb It</h2>
-					<p>Using ricocheting bombs free exotic birds from their captors</p>
+					<h2>Crypto Bird</h2>
+					<p>Jetpack Joyride meets Flappy Bird in this endless runner </p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -66,13 +66,13 @@
 								<footer>
 									<ul class="game-info">
 										<li>
-											<p>Hyper-casual</p>
+											<p>Endless Runner</p>
 										</li>
 										<li>
-											<p>Puzzle</p>
+											<p>Play 2 Earn</p>
 										</li>
 										<li>
-											<p>Physics</p>
+											<p>NFT's</p>
 										</li>
 									</ul>
 								</footer>
