--- a/index.html
+++ b/index.html
@@ -202,29 +202,27 @@
 				</div>-->
 				<div class="col-4 col-12-medium">
 					<header>
-						<h2>Who am I?</h2>
-						<p>From Lisbon, Portugal, I'm a 22 year-old man who has been in love with games
-							ever since I first layed my hands on a console as a kid. </p>
+						<h2>About Me</h2>
+						<p>Born in Lisbon, I'm a programmer that has loved games from the moment I first layed hands on a console as a kid. </p>
 					</header>
-				</div>
-				<div class="col-4 col-12-medium">
-					<p>After graduating in Game Development at Lusofona University with substantial results, I immediately began
-						 working at
-						<a href="https://nerdmonkeys.pt/" target="_blank">Nerd Monkeys</a>
-						and later got hired by
-						<a href="https://funpunchgames.com/" target="_blank">Fun Punch</a>
-						, two of the most renown indie game studios
-						in Portugal.
-					</p>
 				</div>
 				<div class="col-4 col-12-medium">
 					<p>With around <b>5 years' experience</b> in game development, <b>Unity</b> has been my go-to
 						engine, although I've delved into
 						<b>Unreal</b> as well. I've had the chance to work on many different genres of games
-						and develop them for a multitude of platforms, which has given me a wide range of
+						and develop them for a multitude of platforms, acquiring a wide range of
 						experience.
 					</p>
 				</div>
+				<div class="col-4 col-12-medium">
+					<p>Currently working at <a href="https://funpunchgames.com/" target="_blank">Fun Punch Games</a>, 
+						where I've been for over a year, I
+						
+						, two of the most renown indie game studios
+						in Portugal.
+					</p>
+				</div>
+				
 			</div>
 			<hr class="minor colorized" />
 			<p>I am proud to say that I am a very ambitious person who is constantly eager to tackle
