Finish crypto bird page; Add download links to face masher and bomb it.

--- a/bomb-it.html
+++ b/bomb-it.html
@@ -82,13 +82,14 @@
 									ricocheting bombs and projectiles.
 								</p>
 								<!-- DOWNLOAD PAGE -->
-								<!--<footer>
+								<footer>
 									<ul class="actions">
-										<li><a href="https://redoak-studios.itch.io/happy-new-rocket" target="_blank" class="button">Download Link</a></li>
+										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.bombit&hl=en&gl=US" 
+											target="_blank" class="button">Download Link</a></li>
 									</ul>
 								</footer>
 							</section>
-							<hr />-->
+							<hr />
 
 								<!-- Trailer -->
 								<section>
