--- a/face-masher.html
+++ b/face-masher.html
@@ -82,25 +82,26 @@
 									(eyes, nose, mouth, etc) are falling down.
 								</p>
 								<!-- DOWNLOAD PAGE -->
-								<!--<footer>
+								<footer>
 									<ul class="actions">
-										<li><a href="https://redoak-studios.itch.io/happy-new-rocket" target="_blank" class="button">Download Link</a></li>
+										<li><a href="https://play.google.com/store/apps/details?id=com.funpunchgames.facebuilder"
+												target="_blank" class="button">Download Link</a></li>
 									</ul>
 								</footer>
 							</section>
-							<hr />-->
+							<hr />
 
-								<!-- Trailer -->
-								<section>
-									<h3>Videos</h3>
-									<div class="video embed fit">
-										<video src="images/projects/facemasher/gameplay.mp4" autoplay loop controls></video>
-										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
+							<!-- Trailer -->
+							<section>
+								<h3>Videos</h3>
+								<div class="video embed fit">
+									<video src="images/projects/facemasher/gameplay.mp4" autoplay loop controls></video>
+									<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
 											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
-									</div>
-								</section>
-								<hr />
+								</div>
 							</section>
+							<hr />
+						</section>
 
 					</div>
 					<div class="col-8 col-12-medium medium">
@@ -109,25 +110,31 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/facemasher/banner1.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p>	The initial idea behind this project was to create a very simple but interesting gameplay that 
-								felt very casual and if we were happy with it, reach out to publishers. 
+							<p> The initial idea behind this project was to create a very simple but interesting
+								gameplay that
+								felt very casual and if we were happy with it, reach out to publishers.
 								<br><br>The first prototype had a mechanic pretty similar to the one in Face
-								Masher (except it was more of a building game) and it got the attention of a very successful 
-								publisher. They gave us the green light to further develop the game so we could have a 
+								Masher (except it was more of a building game) and it got the attention of a very
+								successful
+								publisher. They gave us the green light to further develop the game so we could have a
 								testable prototype ready for marketing.
-								<br><br> The marketing tests came back with interesting results, but they weren't good enough to
+								<br><br> The marketing tests came back with interesting results, but they weren't good
+								enough to
 								dedicate more time and resources to this project, so we put it aside.
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Fast Prototyping
-									<p> I was responsible for the fast prototyping of the initial concept behind this game.</p>
+									<p> I was responsible for the fast prototyping of the initial concept behind this
+										game.</p>
 								</li>
 								<li>Gameplay Programming
-									<p> I implemented all the gameplay and any other inexistent system that was necessary for 
+									<p> I implemented all the gameplay and any other inexistent system that was
+										necessary for
 										this project.</p>
 								</li>
 								<li>Game Design
-									<p> Alongside my team, I was part of all the game design process behind this game.</p>
+									<p> Alongside my team, I was part of all the game design process behind this game.
+									</p>
 								</li>
 							</ul>
 							<!-- Gallery  -->
@@ -135,63 +142,51 @@
 							<div class="gallery2">
 								<article class="from-left">
 									<a href="images/projects/facemasher/gameplay1.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay1.gif"
-											alt="" /></a>
+											src="images/projects/facemasher/gameplay1.gif" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/gameplay2.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay2.gif"
-											alt="" /></a>
+											src="images/projects/facemasher/gameplay2.gif" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/gameplay3.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay3.gif"
-											alt="" /></a>
+											src="images/projects/facemasher/gameplay3.gif" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/gameplay4.gif" class="image2"><img
-											src="images/projects/facemasher/gameplay4.gif"
-											alt="" /></a>
+											src="images/projects/facemasher/gameplay4.gif" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/1.png" class="image2"><img
-											src="images/projects/facemasher/1.png"
-											alt="" /></a>
+											src="images/projects/facemasher/1.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/2.png" class="image2"><img
-											src="images/projects/facemasher/2.png"
-											alt="" /></a>
+											src="images/projects/facemasher/2.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/3.png" class="image2"><img
-											src="images/projects/facemasher/3.png"
-											alt="" /></a>
+											src="images/projects/facemasher/3.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/4.png" class="image2"><img
-											src="images/projects/facemasher/4.png"
-											alt="" /></a>
+											src="images/projects/facemasher/4.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/5.png" class="image2"><img
-											src="images/projects/facemasher/5.png"
-											alt="" /></a>
+											src="images/projects/facemasher/5.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/6.png" class="image2"><img
-											src="images/projects/facemasher/6.png"
-											alt="" /></a>
+											src="images/projects/facemasher/6.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/7.png" class="image2"><img
-											src="images/projects/facemasher/7.png"
-											alt="" /></a>
+											src="images/projects/facemasher/7.png" alt="" /></a>
 								</article>
 								<article class="from-left">
 									<a href="images/projects/facemasher/8.png" class="image2"><img
-											src="images/projects/facemasher/8.png"
-											alt="" /></a>
+											src="images/projects/facemasher/8.png" alt="" /></a>
 								</article>
 							</div>
 						</section>
