Add plastic heroes page

--- a/crypto-bird.html
+++ b/crypto-bird.html
@@ -93,7 +93,7 @@
 
 								<!-- Trailer -->
 								<section>
-									<h3>Videos</h3>
+									<h3>Trailer</h3>
 									<div class="video embed fit">
 										<video src="images/projects/cryptobird/trailer_cut.mp4" autoplay loop controls
 											muted></video>
