--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Diogo Martins - Crypto Bird</title>
+	<title>Diogo Martins - Plastic Heroes</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -54,8 +54,8 @@
 		<div id="main" class="wrapper style1">
 			<div class="container">
 				<header class="major">
-					<h2>CryptoBird</h2>
-					<p>Jetpack Joyride meets Flappy Bird in this endless runner </p>
+					<h2>Plastic Heroes</h2>
+					<p>Survive hordes of unique evil toys in this co-op first-person shooter</p>
 				</header>
 				<div class="row gtr-150">
 					<div class="col-4 col-12-medium">
@@ -79,8 +79,9 @@
 								<hr />
 								<h3>Synopsis</h3>
 								<p>
-									A play to earn runner where you play as a bird, unique in style and gameplay,
-									flapping your wings to dodge all sorts of hazards.
+									You're a toy in a small but dangerous world where other evil toys will try to kill
+									you! Join
+									your friends and try to survive the odds!
 								</p>
 								<!-- DOWNLOAD PAGE -->
 								<!--<footer>
@@ -95,8 +96,7 @@
 								<section>
 									<h3>Videos</h3>
 									<div class="video embed fit">
-										<video src="images/projects/cryptobird/trailer_cut.mp4" autoplay loop controls
-											muted></video>
+										<video src="images/projects/plasticheroes/" loop controls></video>
 										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
 											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
 									</div>
@@ -109,19 +109,17 @@
 
 						<!-- Content -->
 						<section id="content">
-							<span class="image fit"><img src="images/projects/cryptobird/banner.png" alt="" /></span>
+							<span class="image fit"><img src="images/projects/plasticheroes/Header.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p> CryptoBird is a client project developed for <a href="https://www.exeedme.com/"
-									target="_blank">Exeedme</a>
-								and it is their first Play2Earn blockchain game. It combines in-game characters as
-								NFTs with a rewards pool to incentivize a vibrant gaming community and encompass the
-								true play to earn mechanics.
+							<p> Plastic Heroes is an in-house project that we're developing at Fun Punch Games. It is
+								still in
+								development and aims to launch for mobile and Nintendo Switch.
+								<br>
+								This is a very ambitious project but also one of our favorites. It is the first time
+								we're
+								developing an FPS game and for now we're also set on making it multiplayer.
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
-								<li>Fast Prototyping
-									<p> I was responsible for the fast prototyping of the initial concept behind this
-										game.</p>
-								</li>
 								<li>Gameplay Programming
 									<p> I implemented gameplay systems, mechanics and other specific tools that helped
 										the development of the project.</p>
@@ -134,38 +132,34 @@
 							<h3>Gallery</h3>
 							<div class="gallery2">
 								<article class="from-left">
-									<a href="images/projects/cryptobird/gamemodes.gif" class="image2"><img
-											src="images/projects/cryptobird/gamemodes.gif" alt="" /></a>
+									<a href="images/projects/plasticheroes/PlasticHeroes_Sample_2.gif"
+										class="image2"><img
+											src="images/projects/plasticheroes/PlasticHeroes_Sample_2.gif" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/cryptobird/bird_variation.gif" class="image2"><img
-											src="images/projects/cryptobird/bird_variation.gif" alt="" /></a>
+									<a href="images/projects/plasticheroes/PlasticHeroes_Loadout.png"
+										class="image2"><img
+											src="images/projects/plasticheroes/PlasticHeroes_Loadout.png" alt="" /></a>
+								</article>
+								<article class="from-left">
+									<a href="images/projects/plasticheroes/PlasticHeroes_Sample_3.gif"
+										class="image2"><img
+											src="images/projects/plasticheroes/PlasticHeroes_Sample_3.gif" alt="" /></a>
 								</article>
 
 								<article class="from-left">
-									<a href="images/projects/cryptobird/powerups-and-curses.gif" class="image2"><img
-											src="images/projects/cryptobird/powerups-and-curses.gif" alt="" /></a>
+									<a href="images/projects/plasticheroes/2.png" class="image2"><img
+											src="images/projects/plasticheroes/2.png" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="iimages/projects/cryptobird/birds.gif" class="image2"><img
-											src="images/projects/cryptobird/birds.gif" alt="" /></a>
+									<a href="images/projects/plasticheroes/crimson_claw_page.PNG" class="image2"><img
+											src="images/projects/plasticheroes/crimson_claw_page.PNG" alt="" /></a>
 								</article>
 								<article class="from-left">
-									<a href="images/projects/cryptobird/obstacles.gif" class="image2"><img
-											src="images/projects/cryptobird/obstacles.gif" alt="" /></a>
+									<a href="images/projects/plasticheroes/PlasticHeroes_Slide.png" class="image2"><img
+											src="images/projects/plasticheroes/PlasticHeroes_Slide.png" alt="" /></a>
 								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
-											src="images/projects/cryptobird/minting.gif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/minting.gif" class="image2"><img
-											src="images/projects/cryptobird/pickables.jfif" alt="" /></a>
-								</article>
-								<article class="from-left">
-									<a href="images/projects/cryptobird/ss.jfif" class="image2"><img
-											src="images/projects/cryptobird/ss.jfif" alt="" /></a>
-								</article>
+
 							</div>
 						</section>
 
