--- a/index.html
+++ b/index.html
@@ -173,10 +173,10 @@
 				<!-- Gallery -->
 				<div class="gallery style3 medium onscroll-fade-in">
 					<article>
-						<a href="plastic-heroes.html" class="image2"><img src="images/projects/cryptobird/banner.png" alt="" /></a>
+						<a href="plastic-heroes.html" class="image2"><img src="images/projects/plasticheroes/Header.png" alt="" /></a>
 						<div class="caption">
-							<h3>Crypto Bird</h3>
-							<p class="subtitle"> NFT Endless Runner</p>
+							<h3>Plastic Heroes</h3>
+							<p class="subtitle">Co-op Survival FPS</p>
 							<p class="details"> Programmer | Game Designer </p>
 						</div>
 						<div>
