--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -66,13 +66,13 @@
 								<footer>
 									<ul class="game-info">
 										<li>
-											<p>Endless Runner</p>
+											<p>Multiplayer Co-op</p>
 										</li>
 										<li>
-											<p>Play 2 Earn</p>
+											<p>First Person Shooter</p>
 										</li>
 										<li>
-											<p>NFT's</p>
+											<p>Survival</p>
 										</li>
 									</ul>
 								</footer>
@@ -80,8 +80,7 @@
 								<h3>Synopsis</h3>
 								<p>
 									You're a toy in a small but dangerous world where other evil toys will try to kill
-									you! Join
-									your friends and try to survive the odds!
+									you! Join your friends and see how far you can get!
 								</p>
 								<!-- DOWNLOAD PAGE -->
 								<!--<footer>
@@ -111,17 +110,16 @@
 						<section id="content">
 							<span class="image fit"><img src="images/projects/plasticheroes/Header.png" alt="" /></span>
 							<h3>About The Project</h3>
-							<p> Plastic Heroes is an in-house project that we're developing at Fun Punch Games. It is
-								still in
-								development and aims to launch for mobile and Nintendo Switch.
+							<p> Plastic Heroes is an in-house project that we're developing at Fun Punch Games, aimed to launch
+								 for mobile and Nintendo Switch.
 								<br>
 								This is a very ambitious project but also one of our favorites. It is the first time
-								we're
-								developing an FPS game and for now we're also set on making it multiplayer.
+								we're developing a multiplayer FPS game and we believe this will be a major successful IP to add
+								to our collection.
 							<h3>My Role In The Project</h3>
 							<ul class="roles">
 								<li>Gameplay Programming
-									<p> I implemented gameplay systems, mechanics and other specific tools that helped
+									<p> I implemented gameplay systems, mechanics and specific tools that helped
 										the development of the project.</p>
 								</li>
 								<li>Game Design
