Remove plastic heroes for now

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 				</header>
 				<!-- Gallery -->
 				<div class="gallery style3 medium onscroll-fade-in">
-					<article>
+					<!-- <article>
 						<a href="plastic-heroes.html" class="image2"><img src="images/projects/plasticheroes/Header.png" alt="" /></a>
 						<div class="caption">
 							<h3>Plastic Heroes</h3>
@@ -181,7 +181,7 @@
 						</div>
 						<div>
 						</div>
-					</article>
+					</article> -->
 					<article>
 						<a href="crypto-bird.html" class="image2"><img src="images/projects/cryptobird/banner.png" alt="" /></a>
 						<div class="caption">
