--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -69,7 +69,7 @@
 											<p>Multiplayer Co-op</p>
 										</li>
 										<li>
-											<p>First Person Shooter</p>
+											<p>First-Person Shooter</p>
 										</li>
 										<li>
 											<p>Survival</p>
