--- a/plastic-heroes.html
+++ b/plastic-heroes.html
@@ -95,9 +95,11 @@
 								<section>
 									<h3>Videos</h3>
 									<div class="video embed fit">
-										<video src="images/projects/plasticheroes/" loop controls></video>
-										<!--<iframe src="images/projects/facemasher/gameplay1.mp4"
-											width="560" height="315" allowfullscreen frameborder="0"></iframe>-->
+										<!-- <video src="images/projects/plasticheroes/" loop controls></video> -->
+										<iframe src="https://funpunchgames.com/plasticheroes/video/plastic-heroes-hero-video.mp4"
+											width="560" height="315" frameborder="0" 
+											allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture>" allowfullscreen>
+										</iframe>
 									</div>
 								</section>
 								<hr />
